@startuml Devices
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classFontName Arial

class Device {
    - manufacturer: String
    - price: float
    - serialNumber: String
    + Device()
    + Device(manufacturer: String, price: float, serialNumber: String)
    + getManufacturer(): String
    + setManufacturer(manufacturer: String): void
    + getPrice(): float
    + setPrice(price: float): void
    + getSerialNumber(): String
    + setSerialNumber(serialNumber: String): void
    + replace(): void
    + detect(): void
    + installDriver(): void
    + deleteDriver(): void
    + toString(): String
    + equals(obj: Object): boolean
    + hashCode(): int
}

class EthernetAdapter {
    - speed: int
    - mac: String
    + EthernetAdapter()
    + EthernetAdapter(manufacturer: String, price: float, serialNumber: String, speed: int, mac: String)
    + getSpeed(): int
    + setSpeed(speed: int): void
    + getMAC(): String
    + setMAC(mac: String): void
    + detect(): void
    + toString(): String
}

class Monitor {
    - resolutionX: int
    - resolutionY: int
    + Monitor()
    + Monitor(manufacturer: String, price: float, serialNumber: String, resolutionX: int, resolutionY: int)
    + getResolutionX(): int
    + setResolutionX(resolutionX: int): void
    + getResolutionY(): int
    + setResolutionY(resolutionY: int): void
    + detect(): void
    + toString(): String
}

Device <|-- EthernetAdapter
Device <|-- Monitor

@enduml